--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>D'Lux Auto Spa | Detail</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <link rel="stylesheet" href="https://use.typekit.net/qfh4bwn.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -17,6 +18,12 @@
   <div class="grid-container">
 
     <nav id="main-nav">
+      <div id="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+
       <img class="logo-mini" src="images/logo2.png" alt="dlux auto & spa logo">
       <ul>
         <li><a href=#header>Home</a></li>
@@ -64,7 +71,7 @@
               <h2>
                 Services
               </h2>
-              <p>
+              <p class="service-description">
                 We detail any range of cars, trucks, SUVs, vans, luxury, and exotic vehicles. 
               </p>
               <a href=#contact>
@@ -84,7 +91,7 @@
               <h2>
                 Exterior
               </h2>
-              <p>
+              <p class="exterior-description">
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.et.
               </p>
               <a href=#contact>
@@ -104,7 +111,7 @@
               <h2>
                 Interior
               </h2>
-              <p>
+              <p class="interior-description">
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.et.
               </p>
               <a href=#contact>
@@ -124,7 +131,7 @@
               <h2>
                 Engine
               </h2>
-              <p>
+              <p class="engine-description">
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.et.
               </p>
               <a href=#contact>
@@ -144,7 +151,9 @@
           <h2>Have questions? Want to schedule an appointment?</h2>
           <h3>Contact us by phone or email</h3>
           <button id="email">Email Us</button> 
-          <p id="phone">Telephone: 775-555-5555</p>
+          <a href="tel: 1-555-555-5555" class="phone-link">
+            <p id="phone">Call: 775-555-5555</p>
+          </a>
         </div>
       </section>
 
@@ -156,6 +165,7 @@
    </footer>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
