main buttin 420px margin top on 414px screen. File name change from grid to layout

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>D'Lux Auto Spa | Detail</title>
+  <title>D'Lux Mobile Auto Spa | Detail</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <link rel="stylesheet" href="https://use.typekit.net/qfh4bwn.css">
@@ -144,6 +144,12 @@
           </div>
         </div>
         
+      </section>
+
+      <section>
+        <div id="about">
+          
+        </div>
       </section>
 
       <section>
