Hamburger drop down in js, active class name for dropdown

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <div class="grid-container">
 
     <nav id="main-nav">
-      <div id="hamburger">
+      <div id="hamburger" class="js-burger">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
       </div>
 
-      <img class="logo-mini" src="images/logo2.png" alt="dlux auto & spa logo">
-      <ul>
+      <img class="logo-mini js-logo" src="images/logo2.png" alt="dlux auto & spa logo">
+      <ul class="js-nav">
         <li><a href=#header>Home</a></li>
         <li><a href=#services>Services</a></li>
         <li>About</li>
@@ -148,7 +148,7 @@
 
       <section>
         <div id="about">
-          
+
         </div>
       </section>
 
