js code for hamburger menu. Adds html on click, disappears on large screen

--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
       </div>
 
       <img class="logo-mini js-logo" src="images/logo2.png" alt="dlux auto & spa logo">
-      <ul class="js-nav">
+      <ul class="large-nav">
         <li><a href=#header>Home</a></li>
         <li><a href=#services>Services</a></li>
         <li>About</li>
         <li><a href=#contact>Contact</a></li>
-      </ul>   
+      </ul>
+      <div id="js-nav">
+      </div>
+
     </nav>
 
     <!------------------------- Landing Page -------------------------->
