--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul class="large-nav">
         <li><a href=#header>Home</a></li>
         <li><a href=#services>Services</a></li>
-        <li>About</li>
+        <li><a href=#about>About</a></li>
         <li><a href=#contact>Contact</a></li>
       </ul>
       <div id="js-nav">
@@ -40,7 +40,7 @@
 
     <header id="header">
       <div id="main-image">
-        <div id="gradient"> 
+
           <div id="landing-wrapper">
             <h1 class="title">D'LUX</h1>
             <h2 class="title">MOBILE AUTO SPA</h2>
@@ -55,7 +55,7 @@
               <img id="arrow" src="images/arrow.png" alt="arrow pointing down">
             </a>
           </div>
-        </div>
+        
       </div>
     </header>
 
@@ -151,15 +151,35 @@
 
       <section>
         <div id="about">
-
+          <figure class="about-image">
+            <img src="images/wash-cartoon.jpg" alt="illustration of car being washed">
+            <figcaption>
+              <a href='https://www.freepik.com/vectors/car' class="attribute">Car vector created by vectorjuice - www.freepik.com</a>
+            </figcaption>
+          </figure>
+          <div class="about-description">
+            <h2>Experienced detailers providing excellent results</h2>
+            <p>D'Lux Mobile Auto Spa is a company located in Reno NV.
+               Specialized in detailing cars, SUV's, and trucks.
+               We strive to give you the highest quality service in the area.
+               Contact our experts today to get us started on making your vehicle
+               feel brand new again!
+            </p>
+          </div>
         </div>
       </section>
 
       <section>
         <div id="contact">
+          <figure class="contact-image">
+            <img src="images/contact.jpg" alt="illustration of huge envelope and people standing around it">
+            <figcaption>
+              <a href='https://www.freepik.com/vectors/business' class="attribute">Business vector created by pikisuperstar - www.freepik.com</a>
+            </figcaption>
+          </figure>
           <h2>Have questions? Want to schedule an appointment?</h2>
           <h3>Contact us by phone or email</h3>
-          <button id="email">Email Us</button> 
+          <a href="mailto:" id="email">Email Us</a>
           <a href="tel: 1-555-555-5555" class="phone-link">
             <p id="phone">Call: 775-555-5555</p>
           </a>
