--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
       </section>
 
       <section>
+        
         <div id="contact">
           <figure class="contact-image">
             <img src="images/contact.jpg" alt="illustration of huge envelope and people standing around it">
@@ -177,12 +178,16 @@
               <a href='https://www.freepik.com/vectors/business' class="attribute">Business vector created by pikisuperstar - www.freepik.com</a>
             </figcaption>
           </figure>
-          <h2>Have questions? Want to schedule an appointment?</h2>
-          <h3>Contact us by phone or email</h3>
-          <a href="mailto:" id="email">Email Us</a>
-          <a href="tel: 1-555-555-5555" class="phone-link">
-            <p id="phone">Call: 775-555-5555</p>
-          </a>
+
+          <div class="contact-description">
+            <h2>Have questions? Want to schedule an appointment?</h2>
+            <h3>Contact us by phone or email</h3>
+            <a href="mailto:" id="email">Email Us</a>
+            <a href="tel: 1-555-555-5555" class="phone-link">
+              <p id="phone">Call: 775-555-5555</p>
+            </a>
+          </div>
+
         </div>
       </section>
 
