--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>D'Lux Mobile Auto Spa | Detail</title>
+  <title>Luxury Auto Spa | Detail</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <link rel="stylesheet" href="https://use.typekit.net/qfh4bwn.css">
@@ -24,7 +24,7 @@
         <div class="line"></div>
       </div>
 
-      <img class="logo-mini js-logo" src="images/logo2.png" alt="dlux auto & spa logo">
+      <img class="logo-mini js-logo" src="images/clean-car.png" alt="car logo">
       <ul class="large-nav">
         <li><a href=#header>Home</a></li>
         <li><a href=#services>Services</a></li>
@@ -42,10 +42,9 @@
       <div id="main-image">
 
           <div id="landing-wrapper">
-            <h1 class="title">D'LUX</h1>
-            <h2 class="title">MOBILE AUTO SPA</h2>
+            <h1 class="title">LUXURY</h1>
+            <h2 class="title">AUTO SPA</h2>
             <h3 class="title">Premium quality auto detail.</h3>
-            <!-- <img id="logo" src="images/logo.png" alt="dlux auto & spa logo"> -->
             <div class="button">
               <a href=#services>
                 <button id="service-button">Services</button>
@@ -159,7 +158,7 @@
           </figure>
           <div class="about-description">
             <h2>Experienced detailers providing excellent results</h2>
-            <p>D'Lux Mobile Auto Spa is a company located in Reno NV.
+            <p>Luxury Auto Spa is a company located in Northern Nevada.
                Specialized in detailing cars, SUV's, and trucks.
                We strive to give you the highest quality service in the area.
                Contact our experts today to get us started on making your vehicle
@@ -195,7 +194,7 @@
 
    <footer>
     <i class="fab fa-instagram"></i>
-    <p>Copyright D'Lux Mobile Auto Spa, LLC 2021</p>
+    <p>Copyright Shah Chisty 2021</p>
    </footer>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
